index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     <button onclick="encrypt()">Nachricht verschlüsseln</button>
     <br><br>
     <button onclick="decrypt()">Verschlüsselte Nachricht entschlüsseln</button>
-    <br> <br> <br>
+    <br> 
+    <label for="filetoen">Choose a file:</label>
+
+    <input type="file" id="filetoen" name="filetoen" multiple />
+
+    <br> <br>
     <p> Privacy included*</p>
 
     <script>
