index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <button onclick="encrypt()">Nachricht verschlüsseln</button>
     <br><br>
     <button onclick="decrypt()">Verschlüsselte Nachricht entschlüsseln</button>
-    <br> 
-    <label for="filetoen">Choose a file:</label>
+    <br> <br>
+    <label for="filetoen">Wähle Datei:</label>
 
     <input type="file" id="filetoen" name="filetoen" multiple />
 
