--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- iOS Web-App Meta Tags -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Base64 App">
+  <meta name="apple-mobile-web-app-title" content="Base64+ App">
 
   <!-- App Icons für verschiedene Größen -->
   <link rel="apple-touch-icon" href="/B64app.png">
