index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <br> <br>
     <label for="filetoen">Wähle Datei:</label>
 
-    <input type="file" id="filetoen" name="filetoen" multiple />
+    <input type="file" id="filetoen" name="filetoen" multiple >
 
     <br> <br>
     <p> Privacy included*</p>
